...
                            path.removeLast(path.count)
                            sessionStore.setUser(user)
                        }
                    }
                }

                BCTextButton(label: "Já tenho uma conta") {
                    dismiss()
                }

                Spacer()
            }
            .padding(.horizontal, BCSpacing.xl)
...
